# optikdapp

./: .gitignore  AUDIT_IMPLEMENTATION_GUIDE.md  AUDIT_INDEX.txt  AUDIT_SUMMARY.txt  Anchor.toml  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2026-02-18.md  ENVIRONMENT_VARIABLES.md  ENV_CHECKLIST.md  FILE_TREE.txt  FINAL_LAUNCH_REPORT.md  MCP_INTEGRATION_GUIDE.md  MONGODB_QUICK_REFERENCE.txt  MONGODB_SETUP_SUMMARY.md  PROJECT_AUDIT_REPORT.md  QUICK_START_GUIDE.md  README.md  SOLANA_ONLY_SETUP.md  ULTIMATE_OPTIKGPT_GUIDE.md  automate_deployment.sh  check_status.sh  cleanup.sh  demo_shopify_scraping.py  file-tree-final.txt  file_tree.txt  integrate_payments.sh  package-lock.json  package-vercel.json  package.json  project_structure.txt  project_tree.txt  security_best_practices_report.md  setup_mcp_server.sh  update_config_to_production.sh  vercel.json
.agent/workflows/: deploy.md
.claude/: .pilot-settings-baseline.json
.github/workflows/: security-scan.yml
.next/: trace  trace-build
contracts/: .keep  Anchor.backup.toml  Anchor.toml  Cargo.toml  package.json
contracts/programs/nft-pairer/: Cargo.toml
contracts/programs/nft-pairer/src/: lib.rs  lib_complex.rs
contracts/scripts/: deploy.ts
contracts/src/: MerchantRegistry.sol  OptikCoin.sol  PairedNFT.sol  lib.rs  (+2 more)
docs/: README.md
optik-platform/backend/blockchain/programs/optik-store/: Cargo.toml
optik-platform/backend/blockchain/programs/optik-store/src/: lib.rs
optikcoin/: copilot-instructions.md
scripts/: README.md  start-dev.sh  upload_optik_metadata.sh
weather/: weather.py
(+277 files in other folders)
