[package]
name = "nft-pairer"
version = "0.1.0"
description = "OPTIK NFT Pairer — on-chain NFT pairing with royalty distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_pairer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
